[package]
name = "transformations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.60"
log = "0.4.6"
num = "0.4"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.89"
yew = "0.19.3"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Element", 
    "EventTarget",
    "HtmlElement", 
    "Node",

    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomMatrix",

    "HtmlSelectElement"
]
